--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -571,3 +571,10 @@ Gemspec/AddRuntimeDependency: # new in 1.65
   Enabled: true
 Style/SendWithLiteralMethodName: # new in 1.64
   Enabled: true
+
+Style/MapIntoArray: # new in 1.63
+  Enabled: true
+Style/SuperArguments: # new in 1.64
+  Enabled: true
+Rails/WhereRange: # new in 2.25
+  Enabled: true
