--- a/compose.yaml
+++ b/compose.yaml
@@ -1,16 +1,19 @@
 services:
-  mysqldb:
-   image: mysql
-   command: --default-authentication-plugin=mysql_native_password
+  mariadb:
+   image: mariadb:10.3 # the version installed on prod
    ports:
      - 3306:3306
    environment:
-     MYSQL_DATABASE: sulbib_development
-     MYSQL_ALLOW_EMPTY_PASSWORD: 'true'
-   volumes:
-     - mysql:/var/lib/mysql
-     - mysql_config:/etc/mysql
+     MARIADB_DATABASE: sul-pub # same DB name as prod
+     MARIADB_ALLOW_EMPTY_ROOT_PASSWORD: 1
+  postgres:
+    image: postgres:11
+    ports:
+      - 5432:5432
+    environment:
+      - POSTGRES_PASSWORD=sekret
+    volumes:
+      - postgres-data:/var/lib/postgresql/data
 
 volumes:
-  mysql:
-  mysql_config:
+  postgres-data:
