--- a/config/settings.yml
+++ b/config/settings.yml
@@ -25,9 +25,9 @@ CAP:
 MAIS:
   LOG: log/mais.log
   TOKEN_URL: https://mais-uat.auth.us-west-2.amazoncognito.com
-  BASE_URL: https://aswstest.stanford.edu
-  CLIENT_ID: 5d127563-6cbf-4275-98eb-FAKE
-  CLIENT_SECRET: 19ad9c72-80dd-46d9-b7eb-FAKE
+  BASE_URL: https://mais.suapiuat.stanford.edu
+  CLIENT_ID: FAKE
+  CLIENT_SECRET: FAKE
 
 ## PubMed Auth Config
 PUBMED:
