--- a/config/settings.yml
+++ b/config/settings.yml
@@ -24,9 +24,10 @@ CAP:
 
 MAIS:
   LOG: log/mais.log
-  BASE_URL: https://aswstest.stanford.edu
-  CLIENT_ID: 5d127563-6cbf-4275-98eb-FAKE
-  CLIENT_SECRET: 19ad9c72-80dd-46d9-b7eb-FAKE
+  TOKEN_URL: https://mais-uat.auth.us-west-2.amazoncognito.com
+  BASE_URL: https://mais.suapiuat.stanford.edu
+  CLIENT_ID: FAKE
+  CLIENT_SECRET: FAKE
 
 ## PubMed Auth Config
 PUBMED:
